calender icon invisible issue during order filtering using date in dark mode #6344

--- a/packages/Webkul/Admin/src/Resources/assets/sass/partials/_dark.scss
+++ b/packages/Webkul/Admin/src/Resources/assets/sass/partials/_dark.scss
@@ -452,6 +452,11 @@
         .control {
             border: 1px solid $dark-mode-switch-border;
         }
+
+        input[type=date]  {
+            background: #fff;
+            color: #000;
+        }
     }
 
     .grid-container {
